# resoync

./: Cargo.toml
src/: cli.rs  detector.rs  main.rs  utils.rs
src/parser/: mod.rs  tree_sitter.rs
tests/c/: test.c
tests/cpp/: test.cpp
tests/java/: Test.java
